--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
       <h2>Let's unite and fight together with Covid-19</h2>
     </div>
+    <!--JavaScript-->
     <script type="text/javascript">
       document.querySelector("body").addEventListener('mousemove', eyeball);
       function eyeball(){
